[gd_scene load_steps=17 format=3 uid="uid://cjdhuqymuxw5u"]

[ext_resource type="Script" path="res://scenes/main/Level01.gd" id="1_51tbm"]
[ext_resource type="PackedScene" uid="uid://dpscixfrpu3he" path="res://scenes/main/Player.tscn" id="2_n4gn4"]
[ext_resource type="Texture2D" uid="uid://b5g3f3hta8bnv" path="res://images/bg_white.png" id="3_xcwjs"]
[ext_resource type="FontFile" uid="uid://b7bje77ycxb31" path="res://fonts/CP Font.otf" id="4_6ok8f"]
[ext_resource type="Texture2D" uid="uid://c2jupaank72lf" path="res://images/01_雑魚ボール.png" id="5_6rbvw"]
[ext_resource type="AudioStream" uid="uid://cdyw4oy12qlpi" path="res://music/歓声と拍手2.mp3" id="5_bj7mr"]
[ext_resource type="AudioStream" uid="uid://cfdre65jo3orq" path="res://music/スタジアムの拍手.mp3" id="6_cesxj"]
[ext_resource type="AudioStream" uid="uid://d33ruoa7ai7ro" path="res://music/スタジアムの歓声2.mp3" id="7_2fnkt"]
[ext_resource type="AudioStream" uid="uid://biy6xioiwn5ml" path="res://music/Motion-Swish02-1.mp3" id="9_nu7dr"]
[ext_resource type="Texture2D" uid="uid://cq88j8aaf7gn7" path="res://images/icon_heart.png" id="10_gayth"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_eh2sk"]
size = Vector2(18, 54)

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_bdtun"]
friction = 0.5

[sub_resource type="RectangleShape2D" id="RectangleShape2D_idmju"]
size = Vector2(496, 27)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_omd2s"]
size = Vector2(8, 6)

[sub_resource type="Theme" id="Theme_fy5cl"]
default_font = ExtResource("4_6ok8f")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_06ip1"]
size = Vector2(168.75, 6024)

[node name="Level01" type="Node2D"]
script = ExtResource("1_51tbm")

[node name="Player" parent="." instance=ExtResource("2_n4gn4")]
position = Vector2(208, 12)
move_speed = 50.0
move_speed_max = 250
jump_speed = 500.0

[node name="Ground" type="StaticBody2D" parent="."]
modulate = Color(0.870588, 1, 1, 1)
position = Vector2(0, 307)

[node name="Sprite2D2" type="Sprite2D" parent="Ground"]
position = Vector2(472, 27)
scale = Vector2(18, 54)
texture = ExtResource("3_xcwjs")

[node name="Sprite2D" type="Sprite2D" parent="Ground"]
position = Vector2(120, 26.75)
scale = Vector2(20, 54.5)
texture = ExtResource("3_xcwjs")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Ground"]
position = Vector2(471, 27)
shape = SubResource("RectangleShape2D_eh2sk")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ground"]
position = Vector2(120, 27)
shape = SubResource("RectangleShape2D_eh2sk")

[node name="Seesaw" type="Node2D" parent="."]
position = Vector2(0, -25)

[node name="PinJoint2D" type="PinJoint2D" parent="Seesaw"]
position = Vector2(294, 220)
node_a = NodePath("../SeesawPin")
node_b = NodePath("../SeesawGround")

[node name="SeesawGround" type="RigidBody2D" parent="Seesaw"]
position = Vector2(294, 220)
mass = 50.0
physics_material_override = SubResource("PhysicsMaterial_bdtun")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Seesaw/SeesawGround"]
position = Vector2(0, -4.5)
shape = SubResource("RectangleShape2D_idmju")

[node name="Sprite2D" type="Sprite2D" parent="Seesaw/SeesawGround"]
modulate = Color(0.184314, 0.545098, 0.705882, 1)
position = Vector2(0, -4.75)
scale = Vector2(493, 26.5)
texture = ExtResource("3_xcwjs")

[node name="SeesawPin" type="StaticBody2D" parent="Seesaw"]
position = Vector2(297, 226)
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="Seesaw/SeesawPin"]
modulate = Color(0.870588, 1, 1, 1)
position = Vector2(-2.99998, 74.5)
scale = Vector2(12, 167)
texture = ExtResource("3_xcwjs")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Seesaw/SeesawPin"]
position = Vector2(-3, -6)
shape = SubResource("RectangleShape2D_omd2s")

[node name="ResultUI" type="CanvasLayer" parent="."]

[node name="ResultButton" type="Button" parent="ResultUI"]
offset_left = 171.0
offset_top = 206.0
offset_right = 418.0
offset_bottom = 241.0
theme = SubResource("Theme_fy5cl")
text = "リベンジ！"

[node name="ResultText" type="Label" parent="ResultUI"]
offset_top = 64.0
offset_right = 576.0
offset_bottom = 177.0
theme_override_font_sizes/font_size = 40
horizontal_alignment = 1
vertical_alignment = 1

[node name="CharacterUI" type="CanvasLayer" parent="."]

[node name="CharacterSprite" type="Sprite2D" parent="CharacterUI"]
position = Vector2(705, 452)
scale = Vector2(0.4, 0.4)
texture = ExtResource("5_6rbvw")

[node name="LevelUI" type="CanvasLayer" parent="."]
rotation = -0.29147
scale = Vector2(1, 1)
transform = Transform2D(0.957823, -0.287361, 0.287361, 0.957823, 0, 0)

[node name="LevelText" type="Label" parent="LevelUI"]
offset_left = 500.0
offset_top = 52.0
offset_right = 759.0
offset_bottom = 107.0
theme_override_font_sizes/font_size = 40
text = "Level 1"
vertical_alignment = 1

[node name="SubText" type="Label" parent="LevelUI"]
offset_left = 500.0
offset_top = 107.0
offset_right = 861.0
offset_bottom = 162.0
theme_override_font_sizes/font_size = 20
text = "ころがさないで、のらないで。
"
vertical_alignment = 1

[node name="MainText" type="Label" parent="LevelUI"]
offset_left = 500.0
offset_top = 152.0
offset_right = 867.0
offset_bottom = 207.0
theme_override_font_sizes/font_size = 40
text = "ミスターザコボール
"
vertical_alignment = 1

[node name="MainCamera" type="Camera2D" parent="."]
offset = Vector2(288, 162)

[node name="AudioClear1" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_bj7mr")
bus = &"Sound"

[node name="AudioLose" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_cesxj")
bus = &"Sound"

[node name="AudioWinner" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_2fnkt")
bus = &"Sound"

[node name="AudioLabelUI" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_nu7dr")
bus = &"Sound"

[node name="WallLeft" type="StaticBody2D" parent="."]
position = Vector2(-665.25, -20.5)

[node name="collsion" type="CollisionShape2D" parent="WallLeft"]
position = Vector2(-428.75, -2641.5)
shape = SubResource("RectangleShape2D_06ip1")

[node name="WallRight" type="StaticBody2D" parent="."]
position = Vector2(-665.25, -20.5)

[node name="collsion" type="CollisionShape2D" parent="WallRight"]
position = Vector2(2384.25, -2512.5)
shape = SubResource("RectangleShape2D_06ip1")

[node name="PlayerSpawner" type="Node2D" parent="."]
position = Vector2(176, -55)

[node name="EnemySpawner" type="Node2D" parent="."]
position = Vector2(452, -64)

[node name="HPUI" type="CanvasLayer" parent="."]

[node name="HPUIContainer" type="Control" parent="HPUI"]
layout_mode = 3
anchors_preset = 0
offset_top = -44.0
offset_right = 40.0
offset_bottom = -4.0

[node name="PlayerHP" type="Label" parent="HPUI/HPUIContainer"]
layout_mode = 0
offset_left = 263.0
offset_top = 11.0
offset_right = 335.0
offset_bottom = 34.0
text = "Player
"

[node name="PlayerHBoxContainer" type="HBoxContainer" parent="HPUI/HPUIContainer"]
layout_mode = 0
offset_left = 335.0
offset_top = 12.0
offset_right = 452.0
offset_bottom = 32.0
theme_override_constants/separation = 7

[node name="PlayerHP1" type="TextureRect" parent="HPUI/HPUIContainer/PlayerHBoxContainer"]
layout_mode = 2
texture = ExtResource("10_gayth")
expand_mode = 2

[node name="PlayerHP2" type="TextureRect" parent="HPUI/HPUIContainer/PlayerHBoxContainer"]
layout_mode = 2
texture = ExtResource("10_gayth")
expand_mode = 2

[node name="EnemyHP" type="Label" parent="HPUI/HPUIContainer"]
layout_mode = 0
offset_left = 413.0
offset_top = 11.0
offset_right = 485.0
offset_bottom = 34.0
text = "Enemy"

[node name="EnemyHBoxContainer2" type="HBoxContainer" parent="HPUI/HPUIContainer"]
layout_mode = 0
offset_left = 488.0
offset_top = 12.0
offset_right = 554.0
offset_bottom = 32.0
theme_override_constants/separation = 7

[node name="EnemyHP1" type="TextureRect" parent="HPUI/HPUIContainer/EnemyHBoxContainer2"]
layout_mode = 2
texture = ExtResource("10_gayth")
expand_mode = 2

[node name="EnemyHP2" type="TextureRect" parent="HPUI/HPUIContainer/EnemyHBoxContainer2"]
layout_mode = 2
texture = ExtResource("10_gayth")
expand_mode = 2
